--- a/web/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -50,19 +50,19 @@
                         style="border: 2px solid #fff !important;">
                         <thead>
                           <tr>
-                            <th style="text-align: left;">Action</th>
-                            <th style="text-align: left;">S.No</th>
-                            <th style="text-align: left;">SupplierName</th>
-                            <th style="text-align: left;">SystemCn</th>
-                            <th style="text-align: left;">ReceivedAt</th>
-                            <th style="text-align: left;">PurchaseDate</th>
-                            <th style="text-align: left;">GSTNo</th>
-                            <th style="text-align: left;">Quantity</th>
-                            <th style="text-align: left;">InvoiceAmount</th>
-                            <th style="text-align: left;">Discount</th>
-                            <th style="text-align: left;">GSTAmount</th>
-                            <th style="text-align: left;">CreatedBy</th>
-                            <th style="text-align: left;">UpdatedBy</th>
+                            <th>Action</th>
+                            <th>S.No</th>
+                            <th>SupplierName</th>
+                            <th>SystemCn</th>
+                            <th>ReceivedAt</th>
+                            <th>PurchaseDate</th>
+                            <th>GSTNo</th>
+                            <th>Quantity</th>
+                            <th>InvoiceAmount</th>
+                            <th>Discount</th>
+                            <th>GSTAmount</th>
+                            <th>CreatedBy</th>
+                            <th>UpdatedBy</th>
                           </tr>
                         </thead>
                         <tbody>
