--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -302,14 +302,23 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label style="color: rgb(255 0 0);">RoundOff</mat-label>
+                                        <input style="color: rgb(255 0 0) !important;" matInput name="RoundOff"
+                                            [(ngModel)]="selectedPurchaseMaster.RoundOff
+                                            " disabled
+                                            #RoundOffcontrol [autocomplete]="false">
+                                    </mat-form-field>
+                                </div>
+                                <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-6 mb-0 ml-auto">
                                     <button type="submit" [disabled]="itemList.length === 0"  mat-raised-button color="primary">Save</button>
                                 </div>
-                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 mr-3">
-                                    <button type="button" [disabled]="itemList.length === 0"   mat-raised-button
+                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-6 mb-0 mr-3">
+                                    <button type="button"  [disabled]="itemList.length === 0" (click)="updatedPurchaseReturn()"  mat-raised-button
                                         color="primary">Update</button>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-6 mb-0 ml-auto">
                                     <button  class="shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
                                     <button class="whatsapp ms-1 me-1"><i class="fa-brands fa-whatsapp" ></i> </button>
                                     <button class="email"> <i class="fa-solid fa-envelope"></i></button>
