--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -6,12 +6,12 @@
                 <div class="card">
                     <div class="header">
                         <div class="row">
-                            <div class="col-lg-2 col-4">
+                            <div class="col-lg-2 col-6">
                                 <h2>Purchase Info </h2>
                             </div>
                             <!-- togggle btn start -->
-                            <div class="col-xl-3 col-lg-5 col-md-5 col-8 ms-auto">
-                                <span class="ms-5  ps-5 me-3 " style="font-weight: 600;">
+                            <div class="col-xl-3 col-lg-5 col-md-5 col-6 ms-auto">
+                                <span class="ms-md-5 ps-md-5 me-md-3 ms-0 ps-0 me-0" style="font-weight: 600;">
                                     <mat-slide-toggle name="Multiple" color="primary" [(ngModel)]="disableAddButtons"
                                         class="example-margin" #Multiplecontrol>Quick Entry</mat-slide-toggle>
                                 </span>
@@ -308,7 +308,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false" class="mr-3" type="submit" [disabled]="!f.valid || item.Quantity == 0"
                                         mat-raised-button color="primary" >Add</button>
-                                    <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]="!f.valid || item.Quantity == 0"
+                                    <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]=" item.Quantity == 0"
                                         mat-raised-button color="primary" (click)="editUpdate()">Update</button>
                                 </div>
                             </div>
@@ -478,7 +478,7 @@
                             <!-- Add item List end -->
                             <!-- Total calculcation start -->
                             <div class="row pt-3 ">
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Quantity</mat-label>
                                         <input matInput name="Quantityt" [(ngModel)]="selectedPurchaseMaster.Quantity"
@@ -488,7 +488,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Sub Total</mat-label>
                                         <input matInput name="SubTotalt" [(ngModel)]="selectedPurchaseMaster.SubTotal"
@@ -498,7 +498,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>D.Amount</mat-label>
                                         <input matInput name="DAmountt"
@@ -509,7 +509,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0"  *ngFor="let gst of gst_detail">
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0"  *ngFor="let gst of gst_detail">
                                     <mat-form-field class="example-full-width mb-0">
                                     <mat-label>{{gst.GSTType}}</mat-label>
                                     <input matInput name="igstAmt"  value="{{gst.Amount | number:'1.0-2'}}" disabled>
@@ -518,7 +518,7 @@
                                       </mat-error>
                                 </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>TotalTAXAmt</mat-label>
                                         <input matInput name="GSTAmtt" [(ngModel)]="selectedPurchaseMaster.GSTAmount"
@@ -528,7 +528,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label style="color: rgb(255 0 0);">Total Amount</mat-label>
                                         <input style="color: rgb(255 0 0) !important;" matInput name="TotalAmountt"
@@ -539,15 +539,24 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label style="color: rgb(255 0 0);">RoundOff</mat-label>
+                                        <input style="color: rgb(255 0 0) !important;" matInput name="RoundOff"
+                                            [(ngModel)]="selectedPurchaseMaster.RoundOff
+                                            " disabled
+                                            #RoundOffcontrol [autocomplete]="false">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0 ml-auto">
                                     <button type="button" class="mr-3" mat-raised-button
                                         color="primary">PrintBarcode</button>
                                 </div>
-                                <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
+                                <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0 ml-auto">
                                     <button type="submit"   [disabled]="itemList.length == 0 || id != 0" mat-raised-button color="primary">Save
                                         </button>
                                 </div>
-                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 mr-3">
+                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-6 col-sm-12 col-6  mb-0 mr-3">
                                     <button type="button" [disabled]="itemList.length === 0" (click)="updatedPurchase()"  mat-raised-button
                                         color="primary">Update</button>
                                 </div>
