--- a/web/src/app/sale/doctor/doctor.component.html
+++ b/web/src/app/sale/doctor/doctor.component.html
@@ -10,7 +10,7 @@
                     <div class="body">
                         <form #f="ngForm" autocomplete="off" (ngSubmit)="onsubmit()">
                             <div class="row">
-                                <div class="col-10">
+                                <div class="col-sm-10 col-12">
                                     <div class="row">
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
@@ -193,7 +193,7 @@
                                             [routerLink]="['/sale/doctorList']">Back</button>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-sm-2 col-12">
                                     <div class="row">
                                         <div class="col-10 mt-md-3 ">
                                             <img class="fit-picture" width="170" height="170" [src]="userImage">
