--- a/web/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -76,7 +76,7 @@
                               <mat-icon class="edit_icon ms-1">edit
                               </mat-icon>
                             </button>
-                            <button class="bg-btn" >
+                            <button class="bg-btn" (click)="deleteItem(i)">
                               <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
                           </td>
