--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -45,8 +45,8 @@
                                 <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Supplier CN No.</mat-label>
-                                        <input matInput name="SupplierCN" [(ngModel)]="selectedPurchaseMaster.SupplierCN"
-                                          disabled  (ngModelChange)="selectedPurchaseMaster.SupplierCN = onChange($event)" autocomplete="off">
+                                        <input matInput name="SupplierCn" [(ngModel)]="selectedPurchaseMaster.SupplierCn"
+                                          disabled  (ngModelChange)="selectedPurchaseMaster.SupplierCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-4 col-lg-2 col-md-6 col-sm-12 mb-0">
