--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -128,6 +128,7 @@
               <a href="javascript:void(0)" [routerLink]="['/report/purchase']" id="collapseExample">Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample">Inventory</a>
               <a href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample">Product Transfer</a>
+              <a href="javascript:void(0)" [routerLink]="['/report/product-return']" id="collapseExample">Product Return</a>
               <a href="javascript:void(0)" [routerLink]="['/report/eyetest']" id="collapseExample">Eye Test</a>
             </div>
           </div>
