--- a/web/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -173,8 +173,8 @@
                                                 <th>Barcode</th>
                                                 <th>Supplier</th>
                                                 <th>Unit Price</th>
-                                                <th>Discount</th>
-                                                <th>GST</th>
+                                                <th>Dis%</th>
+                                                <th>GST%</th>
                                                 <th>GST Type</th>
                                                 <th>Retail Price</th>
                                                 <th>WholeSale Price</th>
