--- a/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/web/src/app/report/inventory-report/inventory-report.component.html
@@ -196,7 +196,7 @@
                                         <th>Discount</th>
                                         <th>Sub Total</th>
                                         <th>GST Type</th>
-                                        <th>GST Percentage</th>
+                                        <th>GST%</th>
                                         <th>GST Amount</th>
                                         <th>Grand Total</th>
                                         <th>Retail Price</th>
