--- a/web/src/app/product/product-master/product-master.component.html
+++ b/web/src/app/product/product-master/product-master.component.html
@@ -34,7 +34,7 @@
                                     <div *ngIf="spec.FieldType === 'DropDown'">
                                         <mat-form-field class=" mr-4 mb-0" *ngIf="spec.DisplayAdd === 0">
                                             <mat-label>{{spec.FieldName}}</mat-label>
-                                            <mat-select name="{{spec.FieldName}}" [(ngModel)]="spec.SelectedValue" (selectionChange)="getFieldSupportData(i)" editable="true" [required]="spec.Required" #singleSelect>
+                                            <mat-select name="{{spec.FieldName}}" [(ngModel)]="spec.SelectedValue" (selectionChange)="getFieldSupportData(i)" editable="true" [required]="spec.Required === 1" #singleSelect>
                                                 <mat-option *ngFor="let val of spec.SptFilterData   let i = index;"
                                                     [value]="val.TableValue">
                                                     {{val.TableValue}}
