--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -138,7 +138,7 @@
             <a class="dropBtn" data-target="#collapseExample">Uploader <i class="fa fa-caret-down"
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
-              <a href="javascript:void(0)" id="collapseExample">Inventory</a>
+              <a href="javascript:void(0)" [routerLink]="['/uploader/purchase']" id="collapseExample" >Inventory</a>
             </div>
           </div>
           <!-- companyadmin end Uploader -->
