--- a/web/src/app/uploader/purchase-bluk/purchase-bluk.component.css
+++ b/web/src/app/uploader/purchase-bluk/purchase-bluk.component.css
@@ -18,6 +18,14 @@
     height: 35px;
   }
 
+  .excel {
+    color: #458f37 !important;
+    font-size: 25px !important;
+    transition: 0.5s !important;
+    height: 0px !important;
+    width: 0px !important;
+    cursor: pointer !important;
+}
   
 .bg-btn{
   background: none;
