--- a/web/src/app/uploader/purchase-bluk/purchase-bluk.component.html
+++ b/web/src/app/uploader/purchase-bluk/purchase-bluk.component.html
@@ -20,22 +20,16 @@
                                         Upload File
                                     </button>
                                     <div>
-                                        <button type="submit" [disabled]="!studentDataForm.valid"
-                                            class="btn btn-primary mx-2">Submit</button>
+                                        <button type="submit" class="me-4"  mat-raised-button color="primary" [disabled]="!studentDataForm.valid" >Submit</button>
                                         <!-- <button type="reset" class="btn btn-danger mx-2" (click)="studentDataForm.reset()" >Reset</button> -->
-                                        <a type="button" class="btn btn-primary" title="download Sample File"
-                                            (click)="generateExcel()">Download Sample File</a>
+                                        <a type="button" mat-raised-button color="primary" title="download Sample File"  (click)="generateExcel()">Download Sample File</a>
                                     </div>
                                 </div>
                             </div>
                         </form>
                     </div>
-                    <div class="row mt-5">
-                        <div class="col-md-1 col-12 p-0 ms-3">
-                        </div>
-                        <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
-                        </div>
-                        <div class="col-md-2 col-1 ps-md-0 ps-1">
+                    <div class="row mt-md-5 mt-3">
+                        <div class="col-md-5 col-12  ps-3">
                             <select class=" form-control"
                                 style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                 [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -47,24 +41,18 @@
                                 <option [ngValue]="500">Show 500 Row</option>
                             </select>
                         </div>
-                        <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                        <div class="col-md-3 col-12 mt-md-0 mt-3" style="margin-top:0px;">
                             <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                                 [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage"
                                 [(page)]="currentPage" (pageChange)="getList()" [maxSize]="5" [rotate]="true"
                                 [ellipses]="false" [boundaryLinks]="true">
                             </ngb-pagination>
                         </div>
-                        <div class="col-md-2 col-4 ms-auto">
-                            <div class="input-group">
-                            </div>
-                        </div>
-                        <div class="col-md-1 col-1" style="width: 70px; padding: 0;">
-                        </div>
                     </div>
-                    <!-- customer list start -->
-                    <div class="body mt-2 p-2">
+                    <!--  list start -->
+                    <div class="body mt-2 ">
                         <div class="row">
-                            <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                            <div class="col-sm-12" style="overflow: auto; height: 430px;">
                                 <div class="table-responsive">
                                     <table class="table table-striped table-hover table-sm table-bordered"
                                         style="border: 2px solid #fff !important;">
@@ -80,19 +68,20 @@
                                             <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                 style="white-space: nowrap;">
                                                 <td class="text-left">
-                                                    <button class="detail_icons bg-btn"
+                                                    <button class="detail_icons bg-btn" [disabled]="data.Process == 1"
                                                         (click)="openModal(content,data)">
                                                         <i class="fas fa-info-circle" data-mdb-toggle="modal"
-                                                            data-mdb-target="#exampleModal"> </i>
+                                                            data-mdb-target="#exampleModal" style="pointer-events: none;"> </i>
                                                     </button>
-                                                    <mat-icon class="delete_icon ms-1"
-                                                        (click)="deleteItem(data,i)">delete_forever</mat-icon>
+                                                    <button  class=" bg-btn">
+                                                        <mat-icon class="delete_icon ms-2"  (click)="deleteItem(data,i)">delete_forever</mat-icon>
+                                                    </button>
                                                 </td>
                                                 <td class="text-left">{{i + 1 }}</td>
                                                 <td class="text-left">{{data.originalname }} </td>
                                                 <td class="text-left">
                                                     <a href="{{env.apiUrl}}/{{data.download}}" target="_blank">
-                                                        <i class="fa fa-file-excel" aria-hidden="true"></i>
+                                                     <i class="fa fa-file-excel-o excel"  aria-hidden="true" type="button"> </i>
                                                     </a>
                                                 </td>
                                             </tr>
@@ -102,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- customer list end -->
+                    <!--  list end -->
                 </div>
             </div>
         </div>
@@ -132,7 +121,6 @@
                                 Select Supplier
                             </mat-error>
                         </mat-form-field>
-
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                         <mat-form-field class="example-full-width mb-0">
