--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -139,6 +139,7 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/uploader/purchase']" id="collapseExample" >Inventory</a>
+              <a href="javascript:void(0)" [routerLink]="['/uploader/customer']" id="collapseExample" >Customer</a>
             </div>
           </div>
           <!-- companyadmin end Uploader -->
