--- a/web/src/app/admin/company-list.component.html
+++ b/web/src/app/admin/company-list.component.html
@@ -49,7 +49,7 @@
                                 <div class="course-card" style="height: 28rem;">
                                     <div class="course-card-body">
                                         <div class="course-card-top-overflow text-white">
-                                            <img [src]="data.LogoURL" alt="Image"  class="mx-auto d-block cardImg" />
+                                            <img [src]="data.PhotoURL " alt="Image"  class="mx-auto d-block cardImg" />
                                         </div>
                                         <h2 class="text-center m-0">{{data.Name}}</h2>
                                         <p class="text-center m-0">{{data.OwnerName}}</p>
