--- a/web/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -93,12 +93,12 @@
                       <tbody>
                         <tr class="text-center" *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
-                          <td style="width: 7%;" class="detail_icon">
+                          <td style="width: 7%; text-align: left" class="detail_icon">
                             <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal"
                               (click)="openModal(content,data.ID)">
                             </i>
                             <mat-icon class="edit_icon ms-1" [routerLink]="['/admin/employee',data.ID]">edit</mat-icon>
-                            <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                              <mat-icon *ngIf="data.UserGroup !== 'CompanyAdmin'" (click)="deleteItem(i)" class="delete_icon ms-1">delete_forever</mat-icon>
                           </td>
                           <td class="text-left">{{dataList.length - i}}</td>
                           <td class="text-left">{{data.Name}}</td>
