--- a/web/src/app/product/product-manage/product-manage.component.html
+++ b/web/src/app/product/product-manage/product-manage.component.html
@@ -99,10 +99,10 @@
                                         (click)="showAdd = !showAdd; saveProduct()">
                                         <mat-icon>save</mat-icon>
                                     </button>
-                                    <button class="ms-4" mat-mini-fab color="primary"
+                                    <!-- <button class="ms-4" mat-mini-fab color="primary"
                                         (click)="showAdd = !showAdd; updateProductType()">
                                         <mat-icon>update</mat-icon>
-                                    </button>
+                                    </button> -->
                                 </div>
                             </div>
 
